# url-shorteer

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
app/: main.py
app/api/: dependencies.py
app/api/v1/: schemas.py
app/api/v1/endpoints/: urls.py
app/core/: config.py
app/domain/: entities.py  repositories.py  use_cases.py
app/infrastructure/: database.py  models.py
app/infrastructure/repositories/: postgres.py
scripts/: create_user.py
tests/: conftest.py
tests/integration/: test_api_url.py
tests/unit/: test_use_cases.py
