[project]
name = "url-shorteer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.1",
    "bcrypt>=4.3.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "nanoid>=2.0.0",
    "passlib>=1.7.4",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "pytest>=8.2.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
]

[tool.uv.workspace]
members = [
    "venv",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "httpx==0.27.0",
    "pytest-cov==5.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
